--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1169,7 +1169,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #30a2ff;
+  background: #864dff;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
