--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -27,7 +27,7 @@ $orange       = #fc6423;
 // Settings for some of the most global styles.
 // --------------------------------------------------
 // Global text color on <body>
-$text-color                   = $black-light;
+$text-color                   = $black-deep;
 $text-color-dark              = $grey-light;
 
 // Global link color.
@@ -99,12 +99,12 @@ $font-size-largest        = 1.5em;
 
 
 // Headings font size
-$font-size-headings-step  = .125em;
+$font-size-headings-step  = .125em; //.125em;
 $font-size-headings-base  = (hexo-config('font.enable') and hexo-config('font.headings.size') is a 'unit') ? unit(hexo-config('font.headings.size'), em) : 1.625em;
 
 
 // Global line height
-$line-height-base         = 2;
+$line-height-base         = 2.2; //2;
 $line-height-code-block   = 1.6; // Can't be less than 1.3;
 
 
