change link style

--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -19,6 +19,14 @@
     margin: -20px auto 15px;
     text-align: center;
   }
+  // my custom styles: link styles
+  a:not(.btn) {  
+    color: #ff7a7a;
+    border-bottom: none;
+    &:hover {
+      color: #fc6423;
+    }
+  }
 }
 
 .post-sticky-flag {
@@ -56,6 +64,7 @@
     }
   }
 }
+
 
 @import 'post-collapse';
 @import 'post-eof';
