--- a/themes/next/source/css/_common/outline/sidebar/sidebar-toc.styl
+++ b/themes/next/source/css/_common/outline/sidebar/sidebar-toc.styl
@@ -18,7 +18,7 @@
   }
 
   .nav-item {
-    line-height: 1.8;
+    line-height: 3; //1.8;
     overflow: hidden;
     text-overflow: ellipsis;
     // text-align: justify;
