--- a/source/_data/variables.styl
+++ b/source/_data/variables.styl
@@ -1,2 +1,7 @@
+// post width
 $content-desktop-large   = 65em
 $content-desktop-largest = 65%
+
+// boder radius
+$border-radius-inner     = 20px 20px 20px 20px;
+$border-radius           = 20px;
