--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -3,26 +3,27 @@ body {
     background-image: url("https://raw.githubusercontent.com/CarloHan/pic-blog/master/pictures/blog_background_1.jpeg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: cover; //100% 100%;
+    background-position: 50% 50%;
 }
 
 //博客内容透明化
 //文章内容的透明度设置
 .content-wrap {
-    opacity: 0.9;
+    opacity: 0.92;
 }
 .post-block {
-    background: rgba(255,255,255,0.9) none repeat scroll !important;
+    background: rgba(255,255,255,0.92) none repeat scroll !important;
 }
 .sidebar-inner {
-    background: rgba(255,255,255,0.9) none repeat scroll !important;
+    background: rgba(255,255,255,0.92) none repeat scroll !important;
 }
 //侧边框的透明度设置
 .sidebar {
     background-color: transparent;
-    opacity: 0.9;
+    opacity: 0.92;
 }
 //菜单栏的透明度设置
 .header-inner {
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.92);
 }
